# megaradrpsimul

./: .gitignore  README.md  pyproject.toml
src/megaradrpsimul/: CCDregions.py  config_simulation.yaml  open_read_yaml.py  simulate_MEGARA_reductions.py
src/megaradrpsimul/reduce_simulations/: conversion_into_cube.py  diffuselight_determination.py  get_step_name.py  healing_traces.py  reduce_simulations.py  step_reduction.py
src/megaradrpsimul/simulate_frames/: calculate_bias_readout_noise.py  calculate_image_noise.py  calculate_median_offsets.py  cosmicray_cleaning.py  open_read_yaml_simulation.py  simulate_frames.py  simulate_frames_step.py  simulation_run_save.py  smooth_frames.py
